fix radio-btn radius stretch bug

--- a/src/components/Music.css
+++ b/src/components/Music.css
@@ -102,6 +102,12 @@
     font-weight: bold;
 }
 
+.radio-btn-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .radio-btn {
     /* Remove default appearance */
     -webkit-appearance: none;
